src/containers/App/App.scss
.app {
}

.appContent {
  margin-top: 56px;
  max-width: 800px;
  position: absolute;
  padding-right: 16px;
}


small, .font_small {font-size: 0.707em;}

$drawer-font-family: monospace;
.drawer {
  border-right: 3px solid #e2e4e0;
  background: #fefffa;
  font-family: $drawer-font-family;
}
.drawerContent {
  height: 100%;
  display: flex;
  flex: 1;
  flex-direction: column;
}

.drawerLogo {
  display: flex;
  flex-direction: column;
  margin: 50px 68px;
  @media screen and (max-width: 1024px) {
    margin: 25px 34px;
    display: flex;
  }
  img {
    display:block;
    max-width: 260px;
  }
}

.activeDrawerLink:before,
.nav a:hover::before {
  content: '>';
  display: inline-block;
  position: absolute;
  left: -18px;
  top: -2px;
  font-size: 17px;
  font-family: $drawer-font-family;
}

.nav {
  margin-left: 86px;
  padding: 0;
  list-style-type: none;
  display: flex;
  flex: 1;
  flex-direction: column;
  @media screen and (max-width: 1024px) {
    margin-left: 56px;
  }

  a:hover {
    color: #222;
  }
  a {
    position: relative;
    color: #666;
    text-decoration: none;
    border: none;
    font-size: 18px;
    font-family: $drawer-font-family;
  }
  li {
    margin-bottom: 32px;
    @media screen and (max-width: 1024px) {
      margin-bottom: 22px;
    }
  }
}

.drawerFooter {
  display: flex;
  font-family: $drawer-font-family;
  font-size: 16px;
  margin: 0 0 28px 33px;
  color: #666;
}

